<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <ImageButton
                    android:id="@+id/home__imgBtn__no_add"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:importantForAccessibility="no"
                    android:src="@drawable/no_ad"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:src="@drawable/logo_menu"
                    app:layout_constraintEnd_toStartOf="@id/home__imgBtn__settings"
                    app:layout_constraintStart_toEndOf="@id/home__imgBtn__no_add"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/home__imgBtn__settings"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/settings"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:id="@+id/home__ll__single_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/single"/>

                    <TextView
                        style="@style/MenuTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__single_frames"
                        android:layout_gravity="center"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/home__ll__double_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/home__ll__triple_frame"
                    app:layout_constraintStart_toEndOf="@+id/home__ll__single_frame"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/resource_double"/>

                    <TextView
                        style="@style/MenuTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__double_frames"
                        android:layout_gravity="center"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/home__ll__triple_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/imageButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/triple"/>

                    <TextView
                        style="@style/MenuTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__triple_frames"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home__ll__collage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home__ll__single_frame">

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/collage" />

                    <TextView
                        style="@style/MenuTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__colage"
                        android:layout_gravity="center"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/home__ll__photo_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"

                    app:layout_constraintEnd_toStartOf="@+id/home__ll__add_text"
                    app:layout_constraintStart_toEndOf="@+id/home__ll__collage"
                    app:layout_constraintTop_toBottomOf="@+id/home__ll__double_frame" >

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/photo_edit"/>

                    <TextView
                        style="@style/MenuTextStyle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__photo_edit"
                        android:layout_gravity="center"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home__ll__add_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home__ll__triple_frame" >

                    <ImageButton
                        android:id="@+id/imageButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:importantForAccessibility="no"
                        android:src="@drawable/add_text"/>

                    <TextView
                        style="@style/MenuTextStyle"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_menu__txt__add_text"
                        android:layout_gravity="center"/>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                style="@style/MenuTextStyle.MainCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/home_menu__txt__popular_frames"
                android:textFontWeight="1000"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home__rw__popular_frames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!-- Dummy banner -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:scaleType="center"
            android:src="@drawable/google_banner"
            />
    </LinearLayout>



</LinearLayout>